--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>HTML测试</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h1>Hello HTML!</h1>
-        <p><font color = "de7802">This is HTML!</font></p>
-        <a href="https://bilibili.com" target="_blank">点我看B站~~</a>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>I'm learning HTML</h1>
+    <p>
+        I'll do my best.(wink)
+    </p>
+</body>
 </html>
