--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>I'm learning HTML</h1>
+    <h1>🌳欢迎来到玄树洞🌳</h1>
     <p>
-        I'll do my best.(wink)
+        这里是一个专注于分享个人学习笔记和技术文章的博客网站。希望通过记录和分享我的学习过程，能够帮助更多的朋友一起成长。
+        如果你对某些技术话题感兴趣，或者有任何建议和反馈，
+    </p>
+    <h2>💻大学学习计划💻</h2>
+    <p>
+        1. 计算机程序设计C语言<br>
+        2. 网页设计与开发<br>
+        3. Manim动画制作<br>
+        4. PS等软件的使用<br>
+        5. 持续学习新技术和工具<br>
+        6. 发展软技能，如沟通和团队合作<br> 
     </p>
 </body>
 </html>
