--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body background="Assets/BackGround.png">
     <h1>🌳欢迎来到玄树洞🌳</h1>
     <p>
-        这里是一个专注于分享个人学习笔记和技术文章的博客网站。希望通过记录和分享我的学习过程，能够帮助更多的朋友一起成长。
-        如果你对某些技术话题感兴趣，或者有任何建议和反馈，
+        这里是一个专注于记录个人学习记录的个人网站,欢迎访问和学习!有任何问题都欢迎指出!
     </p>
-    <h2>💻大学学习计划💻</h2>
+    <h2>⬇💻大学学习计划💻⬇</h2>
     <p>
         1. 计算机程序设计C语言<br>
         2. 网页设计与开发<br>
@@ -19,6 +18,10 @@
         4. PS等软件的使用<br>
         5. 持续学习新技术和工具<br>
         6. 发展软技能，如沟通和团队合作<br> 
+    </p>
+    <h3>编程语言</h3>
+    <p>
+        <a href="Pages/Csharp.html" target="_blank">C#</a>
     </p>
 </body>
 </html>
