--- a/index.html
+++ b/index.html
@@ -3,25 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/Blocks.css">
+    <title>玄树洞</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .center {
+            margin: 0 auto;
+        }
+    </style>
 </head>
-<body background="Assets/BackGround.png">
-    <h1>🌳欢迎来到玄树洞🌳</h1>
-    <p>
-        这里是一个专注于记录个人学习记录的个人网站,欢迎访问和学习!有任何问题都欢迎指出!
-    </p>
-    <h2>⬇💻大学学习计划💻⬇</h2>
-    <p>
-        1. 计算机程序设计C语言<br>
-        2. 网页设计与开发<br>
-        3. Manim动画制作<br>
-        4. PS等软件的使用<br>
-        5. 持续学习新技术和工具<br>
-        6. 发展软技能，如沟通和团队合作<br> 
-    </p>
-    <h3>编程语言</h3>
-    <p>
-        <a href="Pages/Csharp.html" target="_blank">C#</a>
-    </p>
+<body bgcolor="darkred">
+    <div class="header">
+        <div>
+            <a href="index.html"><img src="Assets/home.svg" width="50" alt="home" align = "left"></a>
+        </div>
+    </div>
+    <div class="main center">
+        <div><font color="white" size="12">Hello World!</font></div>
+    </div>
+    <div class="footer"></div>
 </body>
 </html>
